vendor/async-trait-0.1.50/tests/ui/unreachable.stderr
error: unreachable statement
  --> $DIR/unreachable.rs:16:9
   |
15 |         let y = unimplemented!();
   |                 ---------------- any code following this expression is unreachable
16 |         let z = y;
   |         ^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/unreachable.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unreachable_code)]` implied by `#[deny(warnings)]`
